--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class = "container">
+		<div class = "news">
+			<ul>
+				<li>Article 1</li>
+				<li>Article 2</li>
+				<li>Article 1</li>
+				<li>Article 1</li>
+			</ul>
+		</div>
+		<div class = "reviews"></div>
+		<div class = "tips"></div>
+		<div class = "interviews"></div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
