--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div class = "container">
-		<div class = "news">
+		<div class = "blog-column">
 			<ul type = "none">
 				<h2>News</h2>
 				<li>Article 1</li>
@@ -18,14 +18,14 @@
 				<li>Article 4</li>
 			</ul>
 		</div>
-		<div class = "reviews">
+		<div class = "blog-column">
 			<ul type = "none">
 				<h2>Reviews</h2>
 				<li>Article 1</li>
 				<li>Article 2</li>
 			</ul>
 		</div>
-		<div class = "tips">
+		<div class = "blog-column">
 			<ul type = "none">
 				<h2>Tips & Tricks</h2>
 				<li>Article 1</li>
@@ -33,7 +33,7 @@
 				<li>Article 3</li>
 			</ul>
 		</div>
-		<div class = "interviews">
+		<div class = "blog-column">
 			<ul type = "none">
 				<h2>Interviews</h2>
 				<li>Article 1</li>
